assets/css/buddypress.css
/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
# Imports
	# Custom properties
	# Reset
	# Typography
	# Elements
	# Links
# Global Buddypress CSS
# rtMedia Specific
# Activity Directory
# Members Directory
# Groups Directory
# Member Single
# Group Single
# BuddyPress Sidebar
# BuddyPress Profile Completion
# Extra Plugin Support
    # GamiPress
    # myCred
    # BadgeOS
    # Buddypress Group Reviews
    # BuddyPress Activity Social Share
    # BuddyPress Check-ins
    # BuddyPress Quotes
    # BuddyPress Polls
    # BuddyPress Profile Pro
    # BuddyPress Activity Social Share
    # BuddyPress Birthday
    # BuddyPress Member/Group Reviews
    # BuddyPress Edit Activity
    # BuddyPress Create Group Type
    # BuddyPress Member Type
--------------------------------------------------------------*/


/*--------------------------------------------------------------
# Imports
--------------------------------------------------------------*/

@import "_custom-properties.css";
@import "_reset.css";
@import "_typography.css";
@import "_elements.css";
@import "_links.css";
@import "_grid.css";

/*--------------------------------------------------------------
# Global Buddypress Css
--------------------------------------------------------------*/

.buddypress .entry-meta {
    display: none;
}

body.activity .entry-content {
    margin-top: 1em;
}

.buddypress .entry-footer {
    padding: 0;
    border: 0;
}

.buddypress .entry-content ol,
.buddypress .entry-content ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

.buddypress-wrap .select-wrap {
    display: inline-block;
    background-color: #fff;
    border: 1px solid var(--global-border-color);
    border-radius: 3px;
}

.buddypress-wrap .select-wrap select {
    margin-right: 0;
    text-indent: 0;
}

body .buddypress-wrap .subnav-filters .component-filters select,
body .buddypress-wrap .subnav-filters .last select {
    font-size: 14px;
    max-width: 100%;
    width: 100%;
    min-height: 34px;
    background-image: url(../images/arrow-down.svg);
    background-repeat: no-repeat;
    background-position: right 10px center;
    border: 0;
}

.buddypress-wrap .standard-form select {
    padding-left: 10px;
}

.buddypress-wrap .select-wrap span.select-arrow {
    display: none;
}

.buddypress-wrap select,
#buddypress.buddypress-wrap form#whats-new-form #whats-new-options select {
    display: inline-block;
    font-family: inherit;
    font-style: inherit;
    font-size: 15px;
    height: 35px;
    outline: none;
    vertical-align: middle;
    background-color: #fff;
    border: 1px solid var(--global-border-color);
    border-radius: 3px;
    box-shadow: none;
    padding: 0 12px;
    padding-right: 40px;
    color: inherit;
}

select,
.buddypress-wrap .select-wrap select,
body #buddypress.buddypress-wrap form#whats-new-form #whats-new-options select,
.buddypress-wrap #notification-select,
.buddypress-wrap .standard-form select {
    -webkit-appearance: none;
    background-image: url("../images/arrow-down.svg");
    background-repeat: no-repeat;
    background-position: right 1rem center;
    padding-right: 40px;
}

.buddypress-wrap input[type="email"]:focus,
.buddypress-wrap input[type="password"]:focus,
.buddypress-wrap input[type="tel"]:focus,
.buddypress-wrap input[type="text"]:focus,
.buddypress-wrap input[type="url"]:focus,
.buddypress-wrap textarea:focus {
    box-shadow: none;
}

.buddypress-wrap .standard-form.profile-edit input:focus {
    background: #fff;
    background-color: rgb(255, 255, 255);
}

#buddypress .comment-reply-link,
#buddypress .generic-button a,
#buddypress .standard-form button,
#buddypress a.button,
#buddypress input[type="button"],
#buddypress input[type="reset"]:not(.text-button),
#buddypress input[type="submit"],
#buddypress ul.button-nav li a,
a.bp-title-button,
#buddypress.buddypress-wrap .activity-list .load-more a,
#buddypress.buddypress-wrap .activity-list .load-newest a,
.buddypress .buddypress-wrap .bp-list.grid .action a,
.buddypress .buddypress-wrap .bp-list.grid .action button,
.buddypress .buddypress-wrap .action button,
form#bp-data-export button,
body.bp-nouveau.media #buddypress div#item-header div#item-header-content button,
body.bp-nouveau.media #buddypress div#item-header div#item-header-content a,
.buddypress .buddypress-wrap button.button,
.buddypress .buddypress-wrap button.button.edit,
.buddypress .buddypress-wrap .btn-default {
    font-family: inherit;
    font-size: initial;
    color: #fff;
    background-color: var(--button_background_color);
    border-radius: 3px !important;
    padding: 8px 20px;
    font-weight: 700;
    font-style: normal;
    text-decoration: none;
    text-align: center;
    cursor: pointer;
    display: inline-block;
    line-height: 1.3;
    border: 1px solid var(--button_border_color);
    outline: 0;
    vertical-align: middle;
    -webkit-appearance: none;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-transition: all linear .2s;
    transition: all linear .2s;
}
/* ... */

